syntax = "proto3";

package common.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/marioscordia/rocket-science/shared/pkg/proto/common/v1;commonv1";

message User {
    string id = 1;
    UserInfo info = 2;
    google.protobuf.Timestamp created_at = 3;
    google.protobuf.Timestamp updated_at = 4;
}

message UserInfo {
    string username=1;
    string email=2;
    repeated NotificationMethod notification_methods=3;
}

message NotificationMethod {
    string provider_name = 1;
    string target = 2;
}