syntax = "proto3";

package user.v1;

import "common/v1/session.proto";
import "common/v1/user.proto";

option go_package = "github.com/marioscordia/rocket-science/shared/pkg/proto/user/v1;userv1";

service UserService {
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc WhoAmI(WhoAmIRequest) returns (WhoAmIResponse);
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string session_id = 1;
}

message WhoAmIRequest {
    string session_id = 1;
}

message WhoAmIResponse {
    common.v1.Session session = 1;
    common.v1.User user = 2;
}

message UserRegistrationInfo {
    common.v1.UserInfo info = 1;
    string password = 2;
}

message RegisterRequest {
    UserRegistrationInfo registration_info = 1;
}

message RegisterResponse {
    string user_id = 1;
}
message GetUserRequest {
    string user_id = 1;
}

message GetUserResponse {
    common.v1.User user = 1;
}
